--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@
     display: grid;
     grid-template-rows: 3;
     background-color: gray;
+    max-width: 25vw;
+    max-height: 75vh;
 }
 
 #board_cell {
     display: grid;
-    min-width: 1rem;
-    max-width: 5rem;
-    min-height: 1rem;
-    max-height: 5rem;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
