--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,16 @@
     display: grid;
     grid-template-columns: 3;
     background-color: darkgray;
-    max-width: 75vw;
-    max-height: 75vh;
+    width: 75vw;
+    height: 75vh;
 }
 
 #board_column {
     display: grid;
     grid-template-rows: 3;
     background-color: gray;
-    max-width: 25vw;
-    max-height: 75vh;
+    width: 25vw;
+    height: 75vh;
 }
 
 #board_cell {
@@ -19,4 +19,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    align-items: center;
+    justify-items: center;
+    font-size: large;
 }
