--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+body {
+    margin: 0;
+    display: grid;
+    grid-template-rows: 1;
+    width: 100vw;
+    height: 100vh;
+}
+
+#status_header {
+    display: grid;
+    position: relative;
+    width: 100vw;
+    height: 3rem;
+    align-items: center;
+    justify-items: center;
+}
+
 #content_container {
     display: grid;
     grid-template-columns: 3;
