--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     display: grid;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 2fr 1fr 4fr;
+    gap: 1rem;
     width: 100vw;
     height: 100vh;
 }
